--- a/environment.yml
+++ b/environment.yml
@@ -1,199 +1,205 @@
-name: mres
+name: pila
 channels:
   - anaconda
   - plotly
-  - conda-forge
   - pytorch
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - autopep8=1.6.0=pyhd3eb1b0_1
-  - blas=1.0=mkl
-  - bottleneck=1.3.5=py310ha9d4c09_0
-  - brotli=1.0.9=h5eee18b_7
-  - brotli-bin=1.0.9=h5eee18b_7
-  - brotli-python=1.0.9=py310h6a678d5_7
-  - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2024.9.24=h06a4308_0
-  - certifi=2024.8.30=py310h06a4308_0
-  - cffi=1.15.1=py310h74dc2b5_0
-  - click=8.1.7=py310h06a4308_0
-  - contourpy=1.2.0=py310hdb19cb5_0
-  - cpuonly=2.0=0
-  - cryptography=41.0.3=py310h130f0dd_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h9c0eb46_1
-  - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.6.7=py310h6a678d5_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - docker-pycreds=0.4.0=pyhd3eb1b0_0
-  - exceptiongroup=1.0.4=py310h06a4308_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=h6a678d5_0
-  - ffmpeg=4.2.2=h20bf706_0
-  - filelock=3.13.1=py310h06a4308_0
-  - fontconfig=2.14.1=h4c34cd2_2
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h4a9f257_0
-  - giflib=5.2.1=h5eee18b_3
-  - gitdb=4.0.7=pyhd3eb1b0_0
-  - gitpython=3.1.37=py310h06a4308_0
-  - glib=2.69.1=h4ff587b_1
-  - gmp=6.2.1=h295c915_3
-  - gmpy2=2.1.2=py310heeb90bb_0
-  - gnutls=3.6.15=he1e5248_0
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - h5py=3.9.0=py310he06866b_0
-  - hdf5=1.12.1=h70be1eb_2
-  - icu=73.1=h6a678d5_0
-  - idna=3.4=py310h06a4308_0
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - ipykernel=6.15.0=pyh210e3f2_0
-  - ipython=8.20.0=py310h06a4308_0
-  - jedi=0.18.1=py310h06a4308_1
-  - jinja2=3.1.2=py310h06a4308_0
-  - joblib=1.2.0=py310h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - jupyter_client=8.6.0=py310h06a4308_0
-  - jupyter_core=5.5.0=py310h06a4308_0
-  - kiwisolver=1.4.4=py310h6a678d5_0
-  - krb5=1.20.1=h568e23c_1
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libclang=14.0.6=default_hc6dbbc7_1
-  - libclang13=14.0.6=default_he11475f_1
-  - libcups=2.4.2=ha637b67_0
-  - libcurl=8.2.1=h91b91d3_0
-  - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libidn2=2.3.4=h5eee18b_0
-  - libllvm14=14.0.6=hef93074_0
-  - libnghttp2=1.52.0=ha637b67_1
-  - libopus=1.3.1=h7b6447c_0
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=12.15=h37d81fd_1
-  - libprotobuf=3.20.3=he621ea3_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libssh2=1.10.0=h37d81fd_2
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.1=h6a678d5_0
-  - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libvpx=1.7.0=h439df22_0
-  - libwebp=1.3.2=h11a3e52_0
-  - libwebp-base=1.3.2=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h5eee18b_1
-  - libxml2=2.10.4=hf1b16e4_1
-  - lz4-c=1.9.4=h6a678d5_0
-  - markupsafe=2.1.3=py310h5eee18b_0
-  - matplotlib=3.7.1=py310h06a4308_1
-  - matplotlib-base=3.7.1=py310h1128e8f_1
-  - matplotlib-inline=0.1.6=py310h06a4308_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py310h7f8727e_0
-  - mkl_fft=1.3.1=py310hd6ae3a3_0
-  - mkl_random=1.2.2=py310h00e6091_0
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpmath=1.3.0=py310h06a4308_0
-  - munkres=1.1.4=py_0
-  - mysql=5.7.24=he378463_2
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.5.6=py310h06a4308_0
-  - nettle=3.7.3=hbbd107a_1
-  - networkx=3.1=py310h06a4308_0
-  - numexpr=2.8.4=py310h8879344_0
-  - numpy=1.24.3=py310hd5efca6_0
-  - numpy-base=1.24.3=py310h8e6c178_0
-  - openh264=2.1.1=h4ff587b_0
-  - openjpeg=2.4.0=h3ad879b_0
-  - openssl=1.1.1w=h7f8727e_0
-  - packaging=23.1=py310h06a4308_0
-  - pandas=1.5.3=py310h1128e8f_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pathtools=0.1.2=pyhd3eb1b0_1
-  - pcre=8.45=h295c915_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pillow=10.0.1=py310ha6cbd5a_0
-  - pip=23.3.1=py310h06a4308_0
-  - platformdirs=3.10.0=py310h06a4308_0
-  - plotly=5.14.1=py_0
-  - ply=3.11=py310h06a4308_0
-  - pooch=1.7.0=py310h06a4308_0
-  - prompt-toolkit=3.0.43=py310h06a4308_0
-  - prompt_toolkit=3.0.43=hd3eb1b0_0
-  - protobuf=3.20.3=py310h6a678d5_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycodestyle=2.10.0=py310h06a4308_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py310h06a4308_1
-  - pyopenssl=23.2.0=py310h06a4308_0
-  - pyparsing=3.0.9=py310h06a4308_0
-  - pyqt=5.15.10=py310h6a678d5_0
-  - pyqt5-sip=12.13.0=py310h5eee18b_0
-  - pysocks=1.7.1=py310h06a4308_0
-  - python=3.10.0=h12debd9_5
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytorch=2.0.0=py3.10_cpu_0
-  - pytorch-mutex=1.0=cpu
-  - pytz=2023.3.post1=py310h06a4308_0
-  - pyyaml=6.0.1=py310h5eee18b_0
-  - pyzmq=25.1.2=py310h6a678d5_0
-  - qt-main=5.15.2=h110a718_10
-  - readline=8.2=h5eee18b_0
-  - requests=2.31.0=py310h06a4308_0
-  - scikit-learn=1.2.0=py310h6a678d5_0
-  - scipy=1.10.1=py310hd5efca6_0
-  - seaborn=0.12.2=py310h06a4308_0
-  - sentry-sdk=1.9.0=py310h06a4308_0
-  - setuptools=68.2.2=py310h06a4308_0
-  - sip=6.7.12=py310h6a678d5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - sympy=1.12=py310h06a4308_0
-  - tenacity=8.2.2=py310h06a4308_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.12=h1ccaba5_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tomli=2.0.1=py310h06a4308_0
-  - torchaudio=2.0.0=py310_cpu
-  - torchdiffeq=0.2.2=pyhd8ed1ab_0
-  - torchvision=0.15.0=py310_cpu
-  - tornado=6.3.3=py310h5eee18b_0
-  - tqdm=4.65.0=py310h2f386ee_0
-  - traitlets=5.7.1=py310h06a4308_0
-  - typing_extensions=4.9.0=py310h06a4308_1
-  - tzdata=2023d=h04d1e81_0
-  - urllib3=1.26.18=py310h06a4308_0
-  - wandb=0.15.1=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.41.2=py310h06a4308_0
-  - x264=1!157.20191217=h7b6447c_0
-  - xz=5.4.5=h5eee18b_0
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.5=h6a678d5_0
-  - zlib=1.2.13=h5eee18b_0
-  - zstd=1.5.5=hc292b87_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=5.1
+  - appdirs=1.4.4
+  - asttokens=2.0.5
+  - autopep8=2.0.4
+  - blas=1.0
+  - bottleneck=1.3.5
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2025.10.5
+  - certifi=2025.10.5
+  - cffi=1.15.1
+  - click=8.1.7
+  - contourpy=1.2.0
+  - cpuonly=2.0
+  - cryptography=41.0.3
+  - cycler=0.11.0
+  - cyrus-sasl=2.1.28
+  - dbus=1.13.18
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - docker-pycreds=0.4.0
+  - exceptiongroup=1.0.4
+  - executing=0.8.3
+  - expat=2.5.0
+  - ffmpeg=4.2.2
+  - filelock=3.13.1
+  - fontconfig=2.14.1
+  - fonttools=4.25.0
+  - freetype=2.12.1
+  - giflib=5.2.1
+  - gitdb=4.0.7
+  - gitpython=3.1.37
+  - glib=2.69.1
+  - gmp=6.2.1
+  - gmpy2=2.1.2
+  - gnutls=3.6.15
+  - gst-plugins-base=1.14.1
+  - gstreamer=1.14.1
+  - h5py=3.9.0
+  - hdf5=1.12.1
+  - icu=73.1
+  - idna=3.4
+  - intel-openmp=2021.4.0
+  - ipykernel=6.15.0
+  - ipython=8.20.0
+  - jedi=0.18.1
+  - jinja2=3.1.2
+  - joblib=1.2.0
+  - jpeg=9e
+  - jupyter_client=8.6.0
+  - jupyter_core=5.5.0
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lame=3.100
+  - lcms2=2.12
+  - ld_impl_linux-64=2.38
+  - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang=14.0.6
+  - libclang13=14.0.6
+  - libcups=2.4.2
+  - libcurl=8.2.1
+  - libdeflate=1.17
+  - libedit=3.1.20230828
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libgomp=11.2.0
+  - libidn2=2.3.4
+  - libllvm14=14.0.6
+  - libnghttp2=1.52.0
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libpq=12.15
+  - libprotobuf=3.20.3
+  - libsodium=1.0.18
+  - libssh2=1.10.0
+  - libstdcxx-ng=11.2.0
+  - libtasn1=4.19.0
+  - libtiff=4.5.1
+  - libunistring=0.9.10
+  - libuuid=1.41.5
+  - libvpx=1.7.0
+  - libwebp=1.3.2
+  - libwebp-base=1.3.2
+  - libxcb=1.15
+  - libxkbcommon=1.0.1
+  - libxml2=2.10.4
+  - llvmlite=0.44.0
+  - lz4-c=1.9.4
+  - markupsafe=2.1.3
+  - matplotlib=3.7.1
+  - matplotlib-base=3.7.1
+  - matplotlib-inline=0.1.6
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - mpc=1.1.0
+  - mpfr=4.0.2
+  - mpmath=1.3.0
+  - munkres=1.1.4
+  - mysql=5.7.24
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - nettle=3.7.3
+  - networkx=3.1
+  - numba=0.61.2
+  - numexpr=2.8.4
+  - numpy=1.24.3
+  - numpy-base=1.24.3
+  - openh264=2.1.1
+  - openjpeg=2.4.0
+  - openssl=1.1.1w
+  - packaging=23.1
+  - pandas=1.5.3
+  - parso=0.8.3
+  - pathtools=0.1.2
+  - pcre=8.45
+  - pexpect=4.8.0
+  - pillow=10.0.1
+  - pip=23.3.1
+  - platformdirs=3.10.0
+  - plotly=5.14.1
+  - ply=3.11
+  - pooch=1.7.0
+  - prompt-toolkit=3.0.43
+  - prompt_toolkit=3.0.43
+  - protobuf=3.20.3
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycodestyle=2.10.0
+  - pycparser=2.21
+  - pygments=2.15.1
+  - pynndescent=0.5.13
+  - pyopenssl=23.2.0
+  - pyparsing=3.0.9
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
+  - pysocks=1.7.1
+  - python=3.10.0
+  - python-dateutil=2.8.2
+  - python_abi=3.10
+  - pytorch=2.0.0
+  - pytorch-mutex=1.0
+  - pytz=2023.3.post1
+  - pyyaml=6.0.1
+  - pyzmq=25.1.2
+  - qt-main=5.15.2
+  - readline=8.2
+  - requests=2.31.0
+  - scikit-learn=1.2.0
+  - scipy=1.10.1
+  - seaborn=0.12.2
+  - sentry-sdk=1.9.0
+  - setuptools=68.2.2
+  - sip=6.7.12
+  - six=1.16.0
+  - sqlite=3.41.2
+  - stack_data=0.2.0
+  - sympy=1.12
+  - tbb=2021.8.0
+  - tenacity=8.2.2
+  - threadpoolctl=2.2.0
+  - tk=8.6.12
+  - toml=0.10.2
+  - tomli=2.0.1
+  - torchaudio=2.0.0
+  - torchdiffeq=0.2.2
+  - torchvision=0.15.0
+  - tornado=6.3.3
+  - tqdm=4.65.0
+  - traitlets=5.7.1
+  - typing_extensions=4.9.0
+  - tzdata=2023d
+  - umap-learn=0.5.9.post2
+  - urllib3=1.26.18
+  - wandb=0.15.1
+  - wcwidth=0.2.5
+  - wheel=0.41.2
+  - x264=1!157.20191217
+  - xz=5.4.5
+  - yaml=0.2.5
+  - zeromq=4.3.5
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
       - affine==2.4.0
       - attrs==25.1.0
@@ -213,4 +219,3 @@ dependencies:
       - shapely==2.0.7
       - smmap==5.0.0
       - xml-python==0.4.3
-prefix: /maps/ys611/miniconda3/envs/mres
